Description
When using the CDROM to install the old DOS game "Lost Files 2", setup cannot load because it cannot open the INSTALL.BMP file (background file of the installer).
With a bit of debug, it appears that it fails opening the file, because if calls 21h/3Dh with AL = 2, which means it wants to open it for writing. Given this is a CDROM, CDFS driver denies the request. This is the only file which is opened that way. And there's absolutely no need to write to the file.
One possible hackfix is to re-issue the open request in NTVDM with no write access, when a write open is denied with access denied (see attached patch). But that's a hack. On Windows, it works like a charm (and we use the same CDFS driver as Windows ).
The ISO can be found here: https://www.abandonware-france.org/ltf_abandon/ltf_jeu.php?id=796